AndroidPanama: fix compilation