@@ -27,20 +27,9 @@
 
 package com.v7878.foreign;
 
-import java.lang.invoke.MethodHandles;
-import java.nio.file.FileSystems;
 import java.nio.file.Path;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.function.BiFunction;
-
-import jdk.internal.access.JavaLangAccess;
-import jdk.internal.access.SharedSecrets;
-import jdk.internal.foreign.MemorySessionImpl;
-import jdk.internal.loader.BuiltinClassLoader;
-import jdk.internal.loader.NativeLibrary;
-import jdk.internal.loader.RawNativeLibraries;
-import jdk.internal.reflect.Reflection;
 
 /**
  * A <em>symbol lookup</em> retrieves the address of a symbol in one or more libraries.
@@ -166,7 +155,15 @@ public interface SymbolLookup {
      */
     default SymbolLookup or(SymbolLookup other) {
         Objects.requireNonNull(other);
-        return name -> find(name).or(() -> other.find(name));
+        // Port-changed: backport
+        // return name -> find(name).or(() -> other.find(name));
+        return name -> {
+            Optional<MemorySegment> tmp = find(name);
+            if (tmp.isPresent()) {
+                return tmp;
+            }
+            return Objects.requireNonNull(other.find(name));
+        };
     }
 
     /**
@@ -201,29 +198,32 @@ public interface SymbolLookup {
      * @see System#loadLibrary(String)
      */
     static SymbolLookup loaderLookup() {
-        Class<?> caller = Reflection.getCallerClass();
-        // If there's no caller class, fallback to system loader
-        ClassLoader loader = caller != null ?
-                caller.getClassLoader() :
-                ClassLoader.getSystemClassLoader();
-        Arena loaderArena;// builtin loaders never go away
-        if ((loader == null || loader instanceof BuiltinClassLoader)) {
-            loaderArena = Arena.global();
-        } else {
-            MemorySessionImpl session = MemorySessionImpl.createHeap(loader);
-            loaderArena = session.asArena();
-        }
-        return name -> {
-            Objects.requireNonNull(name);
-            if (_Utils.containsNullChars(name)) return Optional.empty();
-            JavaLangAccess javaLangAccess = SharedSecrets.getJavaLangAccess();
-            // note: ClassLoader::findNative supports a null loader
-            long addr = javaLangAccess.findNative(loader, name);
-            return addr == 0L ?
-                    Optional.empty() :
-                    Optional.of(MemorySegment.ofAddress(addr)
-                            .reinterpret(loaderArena, null));
-        };
+        //TODO
+        //Class<?> caller = Reflection.getCallerClass();
+        //// If there's no caller class, fallback to system loader
+        //ClassLoader loader = caller != null ?
+        //        caller.getClassLoader() :
+        //        ClassLoader.getSystemClassLoader();
+        //Arena loaderArena;// builtin loaders never go away
+        //if ((loader == null || loader instanceof BuiltinClassLoader)) {
+        //    loaderArena = Arena.global();
+        //} else {
+        //    MemorySessionImpl session = MemorySessionImpl.createHeap(loader);
+        //    loaderArena = session.asArena();
+        //}
+        //return name -> {
+        //    Objects.requireNonNull(name);
+        //    if (_Utils.containsNullChars(name)) return Optional.empty();
+        //    JavaLangAccess javaLangAccess = SharedSecrets.getJavaLangAccess();
+        //    // note: ClassLoader::findNative supports a null loader
+        //    long addr = javaLangAccess.findNative(loader, name);
+        //    return addr == 0L ?
+        //            Optional.empty() :
+        //            Optional.of(MemorySegment.ofAddress(addr)
+        //                    .reinterpret(loaderArena, null));
+        //};
+
+        throw new UnsupportedOperationException("Not supported yet");
     }
 
     /**
@@ -248,10 +248,13 @@ public interface SymbolLookup {
      * {@code LoadLibrary} function.
      */
     static SymbolLookup libraryLookup(String name, Arena arena) {
-        if (_Utils.containsNullChars(name)) {
-            throw new IllegalArgumentException("Cannot open library: " + name);
-        }
-        return libraryLookup(name, RawNativeLibraries::load, arena);
+        //TODO
+        //if (_Utils.containsNullChars(name)) {
+        //    throw new IllegalArgumentException("Cannot open library: " + name);
+        //}
+        //return libraryLookup(name, RawNativeLibraries::load, arena);
+
+        throw new UnsupportedOperationException("Not supported yet");
     }
 
     /**
@@ -275,13 +278,16 @@ public interface SymbolLookup {
      * {@code dlsym} and {@code dlclose} functions.
      */
     static SymbolLookup libraryLookup(Path path, Arena arena) {
-        if (path.getFileSystem() != FileSystems.getDefault()) {
-            throw new IllegalArgumentException("Path not in default file system: " + path);
-        }
-        return libraryLookup(path, RawNativeLibraries::load, arena);
+        //TODO
+        //if (path.getFileSystem() != FileSystems.getDefault()) {
+        //    throw new IllegalArgumentException("Path not in default file system: " + path);
+        //}
+        //return libraryLookup(path, RawNativeLibraries::load, arena);
+
+        throw new UnsupportedOperationException("Not supported yet");
     }
 
-    private static <Z>
+    /*private static <Z>
     SymbolLookup libraryLookup(Z libDesc,
                                BiFunction<RawNativeLibraries, Z, NativeLibrary> loadLibraryFunc,
                                Arena libArena) {
@@ -310,5 +316,5 @@ public interface SymbolLookup {
                     Optional.of(MemorySegment.ofAddress(addr)
                             .reinterpret(libArena, null));
         };
-    }
+    }*/
 }
